<?xml version="1.0" encoding="utf-8"?>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DataEditMenu">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:id="@+id/FileNameTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableRow>
                        <TextView
                            android:id="@+id/uploadedHeader"
                            android:text="@string/sent" />
                        <TextView
                            android:id="@+id/formTypeHeader"
                            android:text="@string/form_type"
                            android:layout_height="100dp"
                            android:layout_width="60dp"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/projectCodeHeader"
                            android:text="@string/project_code"
                            android:layout_height="60dp"
                            android:layout_width="100dp"
                            android:padding="10dp"/>
                        <TextView
                            android:id="@+id/dateModifiedHeader"
                            android:text="@string/date_modified"
                            android:layout_height="60dp"
                            android:layout_width="100dp"
                            android:padding="10dp"/>
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>