<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/project_code"
                    />
                <EditText
                    android:id="@+id/project_code"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
            android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/DateView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_month_year" />

                <TextView
                    android:id="@+id/DateEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:gravity="left"
                    android:ems="10" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/how_many_huts"
                    />
                <EditText
                    android:id="@+id/number_of_huts"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:inputType="number"
                    />
            </TableRow>
        </TableLayout>
        <Button
            android:id="@+id/nextScreenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="nextScreen"
            android:text="@string/next"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>